# flask_app

./: app.db  config.py  flask_app.py  pyproject.toml
app/: __init__.py  errors.py  forms.py  models.py  routes.py  views.py
app/templates/: 404.html  500.html  _post.html  base.html  edit_profile.html  index.html  login.html  user.html
migrations/versions/: 6e528d6bf131_users_table.py  734d7158395e_followers.py  83724d6a83f4_new_fields_in_user_model.py  fc157c091f6e_posts_table.py
