[project]
name = "flask-app"
version = "0.1.0"
description = "Testing flask project"
authors = [
    {name = "dyuzha",email = "matvey10d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-openid (>=1.3.1,<2.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy-migrate (>=0.13.0,<0.14.0)",
    "flask-whooshalchemy (>=0.56,<0.57)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "flask-babel (>=4.0.0,<5.0.0)",
    "flup (>=1.0.3,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
